--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,14 +2,43 @@
 
 body {
   font-family: 'Arvo', serif;
-  background-color: #2F4454;
-  color: white;
+  background-image: url("https://i.imgur.com/iW4uEDk.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #E85A4F;
+}
+
+h1 {
+  color: #E85A4F;
 }
 
 .container {
-  background-color: #1C3334;
+  background-color: #EAE7DC;
+  // opacity: 0.9;
 }
+
 .header-container {
-  background-color: #376E6F;
+  background-color: #EAE7DC;
   color: #1C3334;
+}
+
+.color {
+background-color: #D8C3A5;
+border: none;
+color: #E85A4F;
+}
+
+.products-control {
+  flex-direction: row;
+  display: inline-flex;
+  justify-content: space-evenly;
+}
+
+.form-control {
+  color: #8E8D8A;
+}
+
+#sign-out-col {
+  display: inline-flex;
+  justify-content: space-evenly;
 }
